# retro-spotify-voice-remote

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  e2e_voice.py  install.ps1  pyproject.toml  requirements.txt  test_intents.py
.github/workflows/: ci.yml
retro/: __main__.py  osd.py  player.py  speak.py  stt.py  tokencache.py  voice.py  winaudio.py
spotify_retro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
