[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-retro"
version = "2.0.0"
description = "Free local voice remote for Spotify Premium - offline speech, tray app"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "vosk",
    "sounddevice",
    "spotipy",
    "pystray",
    "Pillow",
    "faster-whisper",
    'pycaw; sys_platform == "win32"',
]

[project.optional-dependencies]
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]

[project.scripts]
spotify-retro = "retro.__main__:main"

[tool.setuptools]
packages = ["retro"]

[tool.bandit]
# B110/B112 (try/except/pass|continue): deliberate resilience in the audio /
# COM / mic-probing paths - a voice remote must degrade, never crash, when a
# device or API misbehaves. B404/B603: one subprocess call, absolute path,
# list args, inputs system-derived and quote-escaped (see set_startup).
skips = ["B110", "B112", "B404", "B603"]

[tool.setuptools.package-data]
retro = ["assets/*"]
